--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
+  <div class="container">
     <a class="navbar-brand fs-1" href="#">Beks</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,16 +22,16 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Books</a>
+          <a class="nav-link" href="books.html">Books</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About Me</a>
+          <a class="nav-link" href="AboutMe.html">About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
     </div>
@@ -47,6 +47,41 @@
             title="YouTube video" allowfullscreen></iframe>
   </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-QLzB/WJqEwEUO2cEbBtxw1Cj3Xp8rT+QL2pT/qGe8JvngRJr4SO8nJGvffdfR1F8"
+        crossorigin="anonymous"></script>
+
+<h2 style="text-align: center;">Language Proficiency</h2>
+
+<table>
+  <thead>
+  <tr>
+    <th>Language</th>
+    <th>Proficiency Level</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td>Turkish</td>
+    <td>Fluent</td>
+  </tr>
+  <tr>
+    <td>English</td>
+    <td>Advanced</td>
+  </tr>
+  <tr>
+    <td>Russian</td>
+    <td>Native</td>
+  </tr>
+  <tr>
+    <td>Kyrgyz</td>
+    <td>Native</td>
+  </tr>
+  </tbody>
+</table>
+
+
 <footer>
   <!-- This is a comment in the footer section -->
 </footer>
