--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
   <p>Here's a video that introduces some of the topics discussed on this site:</p>
 
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" width="100%" height="400" src="https://www.youtube.com/embed/OEXJmNj6SPk?si=_3P0sPPPDNuR4tPt"
-            title="YouTube video" allowfullscreen></iframe>
+    <iframe width="100%" height="400" src="https://www.youtube.com/embed/ShdRyZDFx4U?si=mac7BLlr4aoG_Ixy"
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+            encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen>
+    </iframe>
   </div>
 </div>
 
